--- a/2.2-databases-2/orm_migrations/templates/school/students_list.html
+++ b/2.2-databases-2/orm_migrations/templates/school/students_list.html
@@ -7,7 +7,7 @@
   <ul>
   {% for student in object_list %}
     <li>{{ student.name }} {{ student.group }} <br> Преподаватели: <br>
-      {% for teacher in student.teachers.all %}
+      {% for teacher in student.prefetched_student %}
         {{ teacher.name }}: {{ teacher.subject }} <br>
       {% endfor %}
     </li>
